// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardBalance renders correctly 1`] = `
.emotion-0 {
  margin-top: 0;
  color: #8697a2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.emotion-0:first-child {
  margin-top: 0;
}

.emotion-2 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.emotion-2:first-child {
  margin-top: 0;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

.emotion-3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <p
    className="emotion-0"
  >
    Bitcoin
  </p>
  <p
    className="emotion-2"
  >
    1526.56 
    <abbr
      className="emotion-1"
      title="Millibitcoin"
    >
      mBTC
    </abbr>
  </p>
  <p
    className="emotion-0"
  >
    354568.68 
    <abbr
      className="emotion-3"
      title="US Dollars"
    >
      USD
    </abbr>
  </p>
</div>
`;

exports[`CardBalance renders with currency if no unitTitle provided 1`] = `
.emotion-0 {
  margin-top: 0;
  color: #8697a2;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.emotion-0:first-child {
  margin-top: 0;
}

.emotion-2 {
  margin-top: 0;
  font-size: 1.9375rem;
  line-height: 2.375rem;
}

.emotion-2:first-child {
  margin-top: 0;
}

.emotion-1 {
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.0625rem;
  line-height: 1.25rem;
}

.emotion-3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div>
  <p
    className="emotion-0"
  >
    Bitcoin
  </p>
  <p
    className="emotion-2"
  >
    1526.56 
    <abbr
      className="emotion-1"
      title="Bitcoin"
    >
      mBTC
    </abbr>
  </p>
  <p
    className="emotion-0"
  >
    354568.68 
    <abbr
      className="emotion-3"
      title="Dollars"
    >
      USD
    </abbr>
  </p>
</div>
`;
